fixed textarea overflow issue; fixed description in package.json

--- a/app/customItem/styles.scss
+++ b/app/customItem/styles.scss
@@ -6,6 +6,7 @@
 
         input, select, textarea {
             flex-grow: 1;
+            min-width: 0;
         }
     }
 
